--- a/Firework/Firework.vcxproj
+++ b/Firework/Firework.vcxproj
@@ -154,6 +154,8 @@
     <None Include="shaders\floor.vert" />
     <None Include="shaders\particle.frag" />
     <None Include="shaders\particle.vert" />
+    <None Include="shaders\rocket.frag" />
+    <None Include="shaders\rocket.vert" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
