got compute shader to work I think. Now I need to figure out the spinning effect and so on

--- a/Firework/Firework.vcxproj
+++ b/Firework/Firework.vcxproj
@@ -152,6 +152,7 @@
   <ItemGroup>
     <None Include="shaders\floor.frag" />
     <None Include="shaders\floor.vert" />
+    <None Include="shaders\particle.comp" />
     <None Include="shaders\particle.frag" />
     <None Include="shaders\particle.vert" />
     <None Include="shaders\rocket.frag" />
