--- a/Firework/Firework.vcxproj.filters
+++ b/Firework/Firework.vcxproj.filters
@@ -37,5 +37,6 @@
     <None Include="shaders\particle.vert" />
     <None Include="shaders\rocket.frag" />
     <None Include="shaders\rocket.vert" />
+    <None Include="shaders\particle.comp" />
   </ItemGroup>
 </Project>
