trailing sorted out (maybe, hopefully)

--- a/Firework/Firework.vcxproj
+++ b/Firework/Firework.vcxproj
@@ -157,7 +157,8 @@
     <None Include="shaders\floor.vert" />
     <None Include="shaders\particle.frag" />
     <None Include="shaders\particle.vert" />
-    <None Include="shaders\particleSort.comp" />
+    <None Include="shaders\particleReorder.comp" />
+    <None Include="shaders\particlePrefix.comp" />
     <None Include="shaders\particleTrail.comp" />
     <None Include="shaders\particleUpdate.comp" />
     <None Include="shaders\rocket.frag" />
