--- a/Firework/Firework.vcxproj.filters
+++ b/Firework/Firework.vcxproj.filters
@@ -47,7 +47,8 @@
     <None Include="shaders\rocket.frag" />
     <None Include="shaders\rocket.vert" />
     <None Include="shaders\particleUpdate.comp" />
-    <None Include="shaders\particleSort.comp" />
+    <None Include="shaders\particlePrefix.comp" />
     <None Include="shaders\particleTrail.comp" />
+    <None Include="shaders\particleReorder.comp" />
   </ItemGroup>
 </Project>
