--- a/Firework/Firework.vcxproj
+++ b/Firework/Firework.vcxproj
@@ -153,7 +153,7 @@
     <ClInclude Include="Application.h" />
     <ClInclude Include="camera.h" />
     <ClInclude Include="Firework.h" />
-    <ClInclude Include="shader.h" />
+    <ClInclude Include="Shader.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="shaders\floor.frag" />
