testing on another comp

--- a/Firework/Firework.vcxproj
+++ b/Firework/Firework.vcxproj
@@ -159,6 +159,7 @@
     <None Include="shaders\floor.vert" />
     <None Include="shaders\particle.frag" />
     <None Include="shaders\particle.vert" />
+    <None Include="shaders\particleDenPre.comp" />
     <None Include="shaders\particleReorder.comp" />
     <None Include="shaders\particlePrefix.comp" />
     <None Include="shaders\particleTrail.comp" />
