--- a/Firework/Firework.vcxproj.filters
+++ b/Firework/Firework.vcxproj.filters
@@ -54,5 +54,6 @@
     <None Include="shaders\particlePrefix.comp" />
     <None Include="shaders\particleTrail.comp" />
     <None Include="shaders\particleReorder.comp" />
+    <None Include="shaders\particleDenPre.comp" />
   </ItemGroup>
 </Project>
