--- a/Firework/Firework.vcxproj
+++ b/Firework/Firework.vcxproj
@@ -147,12 +147,14 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Firework.cpp" />
     <ClCompile Include="Shader.cpp" />
+    <ClCompile Include="stb_image.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application.h" />
     <ClInclude Include="camera.h" />
     <ClInclude Include="Firework.h" />
     <ClInclude Include="Shader.h" />
+    <ClInclude Include="stb_image.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="shaders\floor.frag" />
@@ -164,6 +166,9 @@
     <None Include="shaders\particlePrefix.comp" />
     <None Include="shaders\particleTrail.comp" />
     <None Include="shaders\particleUpdate.comp" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="smoke.png" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
