particle method (eularian)

--- a/Firework/Firework.vcxproj
+++ b/Firework/Firework.vcxproj
@@ -150,10 +150,15 @@
     <ClCompile Include="CollocatedVectorGrid3.cpp" />
     <ClCompile Include="FaceCenteredGrid3.cpp" />
     <ClCompile Include="glad.c" />
+    <ClCompile Include="GridBackwardEulerDiffusionSolver3.cpp" />
+    <ClCompile Include="GridPressureSolver3.cpp" />
     <ClCompile Include="GridSystemData3.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Firework.cpp" />
+    <ClCompile Include="PointHashGridSearcher3.cpp" />
+    <ClCompile Include="PointNeighbourSearcher3.cpp" />
     <ClCompile Include="ScalarGrid3.cpp" />
+    <ClCompile Include="SemiLagrangian3.cpp" />
     <ClCompile Include="Shader.cpp" />
     <ClCompile Include="Size3.cpp" />
     <ClCompile Include="stb_image.cpp" />
@@ -172,8 +177,13 @@
     <ClInclude Include="Field.h" />
     <ClInclude Include="Firework.h" />
     <ClInclude Include="Grid.h" />
+    <ClInclude Include="GridBackwardEulerDiffusionSolver3.h" />
+    <ClInclude Include="GridPressureSolver3.h" />
     <ClInclude Include="GridSystemData3.h" />
+    <ClInclude Include="PointHashGridSearcher3.h" />
+    <ClInclude Include="PointNeighbourSearcher3.h" />
     <ClInclude Include="ScalarGrid3.h" />
+    <ClInclude Include="SemiLagrangian3.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="Size3.h" />
     <ClInclude Include="stb_image.h" />
@@ -189,7 +199,7 @@
     <None Include="shaders\particle.vert" />
     <None Include="shaders\particleDenPre.comp" />
     <None Include="shaders\particleInsertionToGrid.comp" />
-    <None Include="shaders\particleNeighbourSearch.comp" />
+    <None Include="shaders\particleKernel.comp" />
     <None Include="shaders\particleReorder.comp" />
     <None Include="shaders\particlePrefix.comp" />
     <None Include="shaders\particleTrail.comp" />
