neighbour search start

--- a/Firework/Firework.vcxproj
+++ b/Firework/Firework.vcxproj
@@ -192,6 +192,7 @@
     <ClInclude Include="VertexCenteredVectorGrid3.h" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="buildNeighbourList.comp" />
     <None Include="gridUpdate.comp" />
     <None Include="shaders\floor.frag" />
     <None Include="shaders\floor.vert" />
