--- a/Firework/Firework.vcxproj.filters
+++ b/Firework/Firework.vcxproj.filters
@@ -33,51 +33,6 @@
     <ClCompile Include="stb_image.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="BoundingBox.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Array3.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Size3.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="CellCenteredScalarGrid3.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="VertexCenteredScalarGrid3.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="CollocatedVectorGrid3.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="CellCenteredVectorGrid3.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="VertexCenteredVectorGrid3.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="FaceCenteredGrid3.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="ScalarGrid3.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="GridSystemData3.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="SemiLagrangian3.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="PointNeighbourSearcher3.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="GridPressureSolver3.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="GridBackwardEulerDiffusionSolver3.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="PointHashGridSearcher3.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -98,60 +53,6 @@
     <ClInclude Include="stb_image.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Field.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Grid.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="BoundingBox.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Array3.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Size3.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="ScalarGrid3.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="VectorGrid3.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="CellCenteredScalarGrid3.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="VertexCenteredScalarGrid3.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="CollocatedVectorGrid3.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="CellCenteredVectorGrid3.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="VertexCenteredVectorGrid3.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="FaceCenteredGrid3.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="GridSystemData3.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="SemiLagrangian3.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="GridBackwardEulerDiffusionSolver3.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="GridPressureSolver3.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="PointNeighbourSearcher3.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="PointHashGridSearcher3.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -166,16 +67,19 @@
     <None Include="shaders\particleTrail.comp" />
     <None Include="shaders\particleReorder.comp" />
     <None Include="shaders\particleDenPre.comp" />
-    <None Include="shaders\particleInsertionToGrid.comp" />
-    <None Include="shaders\particleKernel.comp" />
     <None Include="shaders\pressure.comp" />
-    <None Include="gridUpdate.comp" />
-    <None Include="count.comp" />
-    <None Include="prefix.comp" />
-    <None Include="reorder.comp" />
-    <None Include="buildNeighbourList.comp" />
-    <None Include="neighbourIndices.comp" />
-    <None Include="reset.comp" />
+    <None Include="shaders\count.comp" />
+    <None Include="shaders\pass1prefix.comp" />
+    <None Include="shaders\reorder.comp" />
+    <None Include="shaders\buildNeighbourList.comp" />
+    <None Include="shaders\reset.comp" />
+    <None Include="shaders\updateDensity.comp" />
+    <None Include="shaders\updateViscosity.comp" />
+    <None Include="shaders\computePressure.comp" />
+    <None Include="shaders\updatePressure.comp" />
+    <None Include="shaders\timeIntegration.comp" />
+    <None Include="shaders\pass2prefix.comp" />
+    <None Include="shaders\pass3prefix.comp" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="smoke.png">
